src/views/Stake/stake.scss
#stake-view {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  .rebase-timer {
    margin: 0 !important;
    line-height: 110% !important;
  }

  .stake-tab-panel,
  .stake-tab-panel > div.MuiBox-root {
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-items: center;
    width: 100%;
    padding: 0;
    margin-top: 10px;
  }
}

.migrate-sohm-button {
  position: absolute;
  right: 20px;
  top: 20px;
  font-size: 1em;
  display: flex;
  align-items: center;
  color: #f08080;
  line-height: 30px;
  svg {
    margin-right: 8px;
    color: inherit;
  }
}

.migrate-sohm-button.complete {
  color: #35ee66 !important;
}

.stake-top-metrics {
  display: flex;
  width: 100%;
  padding: 0;
  text-align: center;
  .olympus-sushi {
    flex: 1;
    div {
      line-height: 150%;
    }
    .olympus-logo {
      height: 1.7em;
      width: 1.7em;
      display: inline-block;
      vertical-align: middle;
      margin-right: 5px;
    }
    a {
      margin-right: 5px;
    }
    .fa-external-link-alt {
      width: 0.79em;
      height: 0.79em;
    }
  }
  .stake-apy,
  .stake-tvl {
    flex: 1;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

.ohm-logo-bg {
  height: 22px;
  width: 22px;
  border-radius: 20px;
  display: flex;
  background-color: white;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
}

.ohm-logo-tiny {
  height: 14px;
  width: 14px;
  vertical-align: middle;
  background-color: transparent;
  align-self: center;
  justify-self: center;
}

.logo-holder {
  align-items: center;
  justify-content: center;
  text-align: center;
  display: flex;
  background: none;
  border: 0 !important;
  border-radius: inherit;
  color: #555;
}

.stake-action-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  justify-content: space-around;
}

.stake-tab-buttons {
  margin-bottom: 20px;
}

.ohm-input {
  max-width: 542px;
}

.stake-button {
  margin: auto;
  align-self: center;
  max-width: 542px;
}

.mobile .stake-button,
.tablet .stake-button {
  width: 100% !important;
  max-width: 542px;
  align-self: center;
  justify-self: center;
}

.staking-area {
  margin: 13px 10px 13px 10px;
}

.stake-lp-button {
  text-align: center !important;
  display: flex;
  h6 {
    vertical-align: middle;
    align-content: center;
    align-items: center;
    display: flex;
  }
  svg {
    margin-left: 5px;
  }
  &:hover {
    svg {
      color: inherit;
    }
  }
}

.tablet .stake-table button {
  padding: 0.4rem 1.7rem;
  width: 8rem;
}

.tablet .stake-pool,
.mobile .stake-pool {
  border: 1px solid #f4d09222;
  border-radius: 5px;
  padding: 1.69rem 1.69rem;
  .pool-card-top-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    &.small {
      justify-content: center;
      align-items: center;
      .ohm-pairs {
        margin-bottom: 5px;
      }
    }
    .ohm-pairs p {
      margin-bottom: 0 !important;
    }
  }
  .ohm-logo-bg {
    height: 38px !important;
    width: 38px !important;
    padding: 8px !important;
    margin-left: 0;
  }

  .pool-data {
    margin-top: 15px;
    width: 100%;
    .pool-data-row {
      display: flex;
      justify-content: space-between;
      line-height: 225%;
    }
  }
  .stake-lp-button {
    min-width: 195px !important;
    svg {
      margin-left: 18px !important;
    }
  }
}

.stake-wallet-notification {
  padding: 5%;
  margin-top: 10px;
  text-align: center;
  border-radius: 5px;
  border: 1px solid #f4d09266;
  .wallet-menu {
    text-align: center;
    margin-top: 1.2rem;
    .stake-button {
      max-width: 300px !important;
    }
  }
}

